--- a/style/FooterStyle.css
+++ b/style/FooterStyle.css
@@ -3,7 +3,7 @@
     }
     
     body {
-    font-family: poppins;
+        font-family: 'Poppins', Arial, Helvetica, sans-serif;
     margin: 0;
     display: grid;
     font-size: 14px;
@@ -11,7 +11,7 @@
     header p {
     padding: 50px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
     color: #bebebe;
     text-transform: uppercase;
     font-size: 65px;
@@ -36,7 +36,7 @@
     
     h2 {
     font-weight: 400;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 20px;
     }
     
@@ -51,7 +51,7 @@
     
     .footer a {
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
     }
     
     .r-footer {
@@ -81,7 +81,7 @@
     
     .l-footer p {
     padding-right: 20%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
     color: #999;
     }   
     
