--- a/style/HeaderStyle.css
+++ b/style/HeaderStyle.css
@@ -1,62 +1,68 @@
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 body { 
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 .header {
   overflow: hidden;
-  background-color: rgb(33, 31, 32);
-  padding: 2px 10px;
+  background: linear-gradient(90deg, rgb(33, 31, 32), rgb(60, 58, 59));
+  padding: 10px 20px;
   position: fixed;
   width: 100%;
   z-index: 999;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-
 .header a {
-margin-top: 4px;
+  margin-top: 4px;
   float: left;
-  color: #ffff;
+  color: #ffffff;
   text-align: center;
-  padding: 4px;
+  padding: 8px 16px;
   text-decoration: none;
   font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  transition: all 0.3s ease;
 }
 
 .header a.logo {
-  font-size: 35px;
+  font-size: 24px;
   font-weight: bold;
+  color: #ffd300;
+  text-transform: uppercase;
 }
 
 .header a:hover {
-  background-color: #eeeeee;
+  background-color: #ffd300;
   color: black;
 }
 
-/* .header a.active {
-  background-color: rgb(33, 31, 32);
-  color: white;
-} */
+.header a.active {
+  background-color: #ffd300;
+  color: black;
+  font-weight: bold;
+}
 
 .header-right {
   float: right;
 }
 
-@media screen and (max-width: 500px) {
-
-  .header{
-    position: relative;
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 10px;
   }
 
   .header a {
     float: none;
     display: block;
     text-align: left;
+    padding: 12px;
   }
   
   .header-right {
